src/main/default/objects/Activity/fields/aforza__Type__c.field-meta.xml
<CustomField>
    <fullName>aforza__Type__c</fullName>
    <description>The type of visit task.</description>
    <inlineHelpText>The type of visit task.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Stock Check</fullName>
            </value>
            <value>
                <fullName>Payment Collection</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Perfect Store Core &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Perfect Store Visibility &amp; Display</fullName>
            </value>
            <value>
                <fullName>Call Productivity</fullName>
            </value>
            <value>
                <fullName>Marketing Audit</fullName>
            </value>
            <value>
                <fullName>Competitor Intel</fullName>
                <isActive>false</isActive>
                <label>Competitor Intel</label>
            </value>
            <value>
                <fullName>Delivery</fullName>
                <isActive>false</isActive>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>Merchandise Audit</fullName>
                <isActive>false</isActive>
                <label>Merchandise Audit</label>
            </value>
            <value>
                <fullName>Merchandise Review</fullName>
                <isActive>false</isActive>
                <label>Merchandise Review</label>
            </value>
            <value>
                <fullName>Presentation</fullName>
                <isActive>false</isActive>
                <label>Presentation</label>
            </value>
            <value>
                <fullName>Promotion Compliance</fullName>
                <isActive>false</isActive>
                <label>Promotion Compliance</label>
            </value>
            <value>
                <fullName>Stock Audit</fullName>
                <isActive>false</isActive>
                <label>Stock Audit</label>
            </value>
            <value>
                <fullName>Survey</fullName>
                <isActive>false</isActive>
                <label>Survey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>